--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
 
         <div id="right-side">
-            <button id="switch-mode-button" data-mode-on="onLight"><img id="switch-icon" src="images/moon.png" alt="toogle-mode-icon"></button>
+            <button id="switch-mode-button" data-mode-on="onLight"><img id="switch-icon" src="./images/moon.png" alt="toogle-mode-icon"></button>
             <h2 id="right-title">Registre-se</h2>
             <form action="" target="">
                 
